Added volume rendering module

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,3 +21,4 @@ add_subdirectory(common)
 add_subdirectory(simulation)
 add_subdirectory(cartoon)
 add_subdirectory(opendeck)
+add_subdirectory(volume)
