Fixed MaxOSX build

--- a/cartoon/CMakeLists.txt
+++ b/cartoon/CMakeLists.txt
@@ -29,7 +29,7 @@ list(APPEND MODULE_SOURCES ${ISPC_OBJECTS})
 
 # Compile C++ code
 include_directories(${RESEARCH_BRAYNS_MODULE_DIR} ${OSPRAY_INCLUDE_DIRS})
-set(MODULE_LINK_LIBRARIES PUBLIC ${OSPRAY_LIBRARIES})
+set(MODULE_LINK_LIBRARIES PUBLIC ${OSPRAY_LIBRARIES} research_brayns_module_common)
 add_library(${MODULE_NAME} SHARED ${MODULE_SOURCES})
 target_link_libraries(${MODULE_NAME} ${MODULE_LINK_LIBRARIES})
 
