Renamed repository to Brayns-Research-Modules

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,15 +2,15 @@
 # All rights reserved. Do not distribute without permission.
 # Responsible Author: Cyrille Favreau <cyrille.favreau@epfl.ch>
 #
-# This file is part of https://github.com/favreau/research-brayns-module
+# This file is part of https://github.com/favreau/Brayns-Research-Modules
 
 cmake_minimum_required(VERSION 3.1 FATAL_ERROR)
 
 list(APPEND CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/CMake)
-set(RESEARCH_BRAYNS_MODULE_DIR ${PROJECT_SOURCE_DIR})
+set(BRAYNS_RESEARCH_MODULES_DIR ${PROJECT_SOURCE_DIR})
 
 # C++ 11
-add_compile_options(-std=c++11)
+add_compile_options(-std=c++11 -fPIC)
 
 # OSPRay
 find_package(ospray REQUIRED SYSTEM)
