--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,3 +22,4 @@ add_subdirectory(cartoon)
 add_subdirectory(fractals)
 add_subdirectory(simulation)
 add_subdirectory(volume)
+add_subdirectory(raymarching)
