Added Voxelizer renderer

--- a/fractals/CMakeLists.txt
+++ b/fractals/CMakeLists.txt
@@ -11,10 +11,12 @@ set(${MODULE_NAME}_VERSION_ABI 1)
 
 set(MODULE_SOURCES
     fractals.cpp
+    ispc/renderer/VoxelizerRenderer.cpp
     ispc/renderer/MengerSpongeRenderer.cpp
     ispc/renderer/FractalsRenderer.cpp)
 
 set(MODULE_ISPC_SOURCES
+    ispc/renderer/VoxelizerRenderer.ispc
     ispc/renderer/MengerSpongeRenderer.ispc
     ispc/renderer/FractalsRenderer.ispc)
 
