Added path tracing module

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,3 +23,5 @@ add_subdirectory(fractals)
 add_subdirectory(simulation)
 add_subdirectory(volume)
 add_subdirectory(raymarching)
+add_subdirectory(pathtracing)
+
