Added holographic module

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,3 +25,4 @@ add_subdirectory(volume)
 add_subdirectory(raymarching)
 add_subdirectory(pathtracing)
 add_subdirectory(pbr)
+add_subdirectory(holography)
