--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,5 +24,6 @@ add_subdirectory(simulation)
 add_subdirectory(volume)
 add_subdirectory(raymarching)
 add_subdirectory(pathtracing)
-add_subdirectory(pbr)
+#add_subdirectory(pbr)
 add_subdirectory(holography)
+add_subdirectory(subsurfacescattering)
