Added sphere clipping module

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,6 +20,7 @@ include(ispc)
 add_subdirectory(plugin)
 add_subdirectory(common)
 add_subdirectory(cartoon)
+add_subdirectory(clipping)
 add_subdirectory(fractals)
 add_subdirectory(simulation)
 add_subdirectory(volume)
