--- a/plugin/CMakeLists.txt
+++ b/plugin/CMakeLists.txt
@@ -8,6 +8,8 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 
 set(${PLUGIN_NAME}_SOURCES
+  api/ResearchModulesParams.cpp
+  oi/EEGHandler.cpp
   BraynsResearchModulesPlugin.cpp
 )
 
