--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,8 +5,8 @@
 # This file is part of https://github.com/favreau/Brayns-Research-Modules
 
 cmake_minimum_required(VERSION 3.1 FATAL_ERROR)
-set(NAME BRAYNSRESEARCHMODULES)
-set(LIBRARY_NAME braynsResearchModules)
+set(NAME RESEARCHMODULES)
+set(LIBRARY_NAME ResearchModules)
 project(${NAME} VERSION 1.0.0)
 set(${NAME}_VERSION_ABI 1)
 
